# filehasherpoc

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  meson.build
src/: database.c  database.h  dbtest.c  debug.h  directories.c  directories.h  directory_hblk.c  directory_hblk.h  file_scanner.c  file_scanner.h  main.c  meowhash.h
synalyze/: sync_dir_file_blocks.grammar
